--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "spot_dwl"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-
+license-file = "LICENSE"
+description = "A simple helper to download songs from spotify using spotdl"
+readme = "README.md"
+repository = "https://github.com/taishingi/spot_dwl.git"
+authors = ["Willy Micieli"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
