--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "spot_dwl"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
 license-file = "LICENSE"
 description = "A simple helper to download songs from spotify using spotdl"
 readme = "README.md"
 repository = "https://github.com/taishingi/spot_dwl.git"
 authors = ["Willy Micieli"]
+keywords = ["spotify", "downloader", "music"]
+categories = ["command-line-utilities"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-notify-rust = "4.10.0"
